--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <h1>Users</h1>
 <ul>
     {% for user in users %}
-    <li><a href="/users/{{ user.id }}">{{ user.firstname }} {{ user.lastname }}</a></li>
+    <li><a href="/users/{{ user.id }}">{{ user.first_name }} {{ user.last_name }}</a></li>
     {% endfor %}
 </ul>
 <form action="/users/new" method="GET">
