--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -1,12 +1,23 @@
+{% extends 'base.html' %}
+
 {% block title %} User Detail {% endblock %}
 
 {% block content %}
-<img src="{{ user.imageurl }}" >
-<h1>{{user.firstname}} {{user.lastname}}</h1>
+<img src="{{ user.image_url }}" >
+<h1>{{ user.first_name }} {{ user.last_name }}</h1>
 <form action="/users/{{ user.id }}/edit" method="GET">
     <button>Edit</button>
 </form>
 <form action="/users/{{ user.id }}/delete" method="GET">
     <button>Delete</button>
+</form>
+<h1>Posts</h1>
+<ul>
+{% for post in user.posts %}
+<li><a href="/posts/{{ post.id }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
+<form action="/users/{{ user.id }}/posts/new" method="GET">
+    <button>Add Post</button>
 </form>
 {% endblock %}
