commit part 3 for repo, issue with delete function, missing testing

--- a/templates/editpost.html
+++ b/templates/editpost.html
@@ -9,6 +9,9 @@
     <input type="text" name="title" placeholder="Edit Post Title"></p>
     <p> {{ post.content }}
     <input type="text" name="content" placeholder="Edit Post Content"></p>
+    {% for tag in tags %}
+    <p><input type="checkbox" value="{{ tag.id }}" name="tag">{{ tag.name }}</p>
+    {% endfor %}
     <button>Save</button>
 </form>
 <form action='/users/{{ post.users.id }}' method="GET">
