--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} {% endblock %}</title>
+  <meta charset="UTF-8">
+  <title>
+    {% block title %} Blogly {% endblock %}
+  </title>
+  <link rel="stylesheet"
+        href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    {% block content %} 
-    {% endblock %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/">Blogly</a>
+  <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
+    <li class="nav-item"><a class="nav-link" href="/tags">Tags</a></li>
+  </ul>
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <a class="btn btn-sm btn-secondary" href="/users/new">Add user</a>
+    </li>
+    <li class="nav-item">
+      <a class="btn btn-sm btn-secondary" href="/tags/new">Add tag</a>
+    </li>
+  </ul>
+</nav>
+<div class="container mt-5">
+  {% block content %}
+  {% endblock %}
+</div>
 </body>
 </html>
