--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -5,8 +5,11 @@
 {% block content %}
 <h1>Add Post for {{ user.first_name }} {{ user.last_name }}</h1>
 <form action="/users/{{ user.id }}/posts/new" method="POST">
-    <p>Title <input type="text" name="title"></p>
-    <p>Content <input type="text" name="content"></p>
+    <p>Title <input type="text" name="title" placeholder="Enter Your Post's Title"></p>
+    <p>Content <input type="text" name="content" placeholder="Enter Your Content Here"></p>
+    {% for tag in tags %}
+    <p><input type="checkbox" value="{{ tag.id }}" name="tag">{{ tag.name }}</p>
+    {% endfor %}
     <button>Add</button>
 </form>
 <form action ='/users/{{ user.id }}' method="GET">
